cmake_minimum_required(VERSION 3.19)
project(PersonalCountBook LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Gui)

qt_standard_project_setup()

qt_add_executable(PersonalCountBook
    WIN32 MACOSX_BUNDLE
    main.cpp
    Widget.cpp
    date.cpp
    item.cpp
    datamanager.cpp
    WelcomeWidget.cpp
)

target_link_libraries(PersonalCountBook
    PRIVATE
        Qt::Core
        Qt::Widgets
        Qt::Gui
)

install(TARGETS PersonalCountBook
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

qt_generate_deploy_app_script(
    TARGET PersonalCountBook
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})